<resources>
    <string name="app_name">Ivy Player</string>
    <string name="info">Ivy Player\nVersion 1.0.0\nCopyright 2015 HHLTeam
    </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_Stream">Streaming</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_video_play">Video Player</string>
    <string name="Image">null</string>
    <string name="search">Search</string>
    <string name="action_about">About</string>
    <string name="search_box_hint"><i>Search</i></string>
    <string name="stream_activity">Streaming Video</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="btn_anh_mo_ta">Chọn ảnh mô tả</string>
    <string name="btn_chon_video">Chọn Video</string>
    <string name="btn_uploadVideo">Upload</string>
    <string name="editTxt_TenVideo">Nhap ten video...</string>
    <string name="editTxt_MoTa">Nhap mo ta cho video...</string>
    <string name="two_fragment">Fragment 2</string>
    <string name="userCommentOnline">User</string>
    <string name="commentOnline">Comment...</string>
    <string name="btn_Xoa">Xóa</string>
    <string name="btn_GuiBinhLuan">Gửi bình luận</string>
    <string name="guiBinhLuan_hint">Nhập bình luận...</string>
    <string name="txtview_VideoTitle">Tên Video: </string>
    <string name="nguoi_xuat_ban">Người xuất bản: </string>
    <string name="ngay_xuat_ban">Ngày xuất bản: </string>
    <string name="danh_gia_chung">Đánh giá chung: </string>
    <string name="mo_ta">Mô tả: </string>
    <string name="danh_gia_cua_ban">Bạn đánh giá: </string>
    <string name="xem">Xem</string>

</resources>
