<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:id="@+id/imageView_popup"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtview_VideoTitle"
        android:id="@+id/txtView_VideoTitle_Popup"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nguoi_xuat_ban"
        android:id="@+id/txtView_User_Popoup"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ngay_xuat_ban"
        android:id="@+id/txtView_NgayXb_Popup"
        android:textSize="16dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/danh_gia_chung"
            android:id="@+id/textView9"
            android:layout_gravity="center_vertical"
            android:textSize="16dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar_user_popup"
            style="@android:style/Widget.Holo.RatingBar.Small"
            android:layout_gravity="center_vertical" />

    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mo_ta"
        android:id="@+id/txtView_Mota_Popup"
        android:textSize="16dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/danh_gia_cua_ban"
            android:id="@+id/textView12"
            android:layout_gravity="center_vertical"
            android:textSize="16dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar_you_popup"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xem"
        android:id="@+id/btn_Xem_popup"
        android:layout_gravity="center_horizontal" />

</LinearLayout>