<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:id="@+id/videoViewOnline"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.23" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:visibility="gone"
        android:background="@android:color/white" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.98">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/userCommentOnline"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/commentOnline"
                android:id="@+id/textView2" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Xoa"
            android:id="@+id/btn_Xoa" />
    </TableRow>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTxt_GuiBinhLuan"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:hint="@string/guiBinhLuan_hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_GuiBinhLuan"
        android:id="@+id/btn_GuiBinhLuan"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

</LinearLayout>