<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="121dp"
        android:id="@+id/videoView_Upload"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/imageView"
        android:layout_weight="0.37" />

    <ImageView
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:id="@+id/imageView_VideoUpload"
        android:layout_above="@+id/btn_chon_video"
        android:layout_toRightOf="@+id/btnchon_anh"
        android:layout_toEndOf="@+id/btnchon_anh"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.19"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_anh_mo_ta"
            android:id="@+id/btn_chon_anh"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_chon_video"
            android:id="@+id/btn_chon_video"
            android:layout_alignTop="@+id/btnchon_anh"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_gravity="bottom" />

    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_TenVideo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/editTxt_TenVideo"
        android:singleLine="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_MoTa"
        android:layout_below="@+id/editText_TenVideo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/editTxt_MoTa"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_uploadVideo"
        android:id="@+id/btn_upload"
        android:layout_below="@+id/editText_MoTa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        />

</LinearLayout>